fixes text overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+body, html {
+  font-family: 'Roboto', sans-serif;
+}
 :root {
   --ease: 2s cubic-bezier( 0.9, 0, 0.1, 1);
   --default-icon-size: 150px;
@@ -12,7 +16,6 @@ main {
 
   position: relative;
   /* set for testing */
-  /*background-color: #555;*/
 }
 
 .player-icon {
@@ -30,12 +33,22 @@ main {
               width var(--ease),
               height var(--ease);
   
+  
 }
-.player-icon span {
+.player-icon .label {
+  position:relative;
+  width: 100%;
+  height: 30px;
+}
+.player-icon .label span {
   width: 100%;
   text-align: center;
-  background-color: blue;
-  font-size: 1vw;
+  font-weight: bold;
+  font-size: 25px;
+  position:absolute;
+  left: 50%;
+  transform: translate(-50%);
+  width: 300%;
 }
 .player-icon-img {
   margin:0;
